<resources>
    <string name="app_name">LikeStore</string>

    <!-- This is a string for email address -->
    <string name="emailText">hello@likestore.co</string>

    <!-- This is a string for website adress -->
    <string name="websiteText">http://likestore.co</string>

    <!-- This is a string for instagram and facebook address -->
    <string name="igFbText">likestoreco</string>

    <!-- This is a string for phone number -->
    <string name="phoneText">0212 249 19 49</string>

    <!-- This is a string for address text -->
    <string name="addressText">Kemankeş Karamustafa Paşa Mahallesi, No:12, Murakıp Sk., 34425 Beyoğlu/İstanbul</string>


</resources>
